--- a/apps/m-admin/src/index.html
+++ b/apps/m-admin/src/index.html
@@ -2,10 +2,17 @@
 <html dir="ltr" lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>MAdmin</title>
+    <title>Admin App</title>
     <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <meta name="color-scheme" content="light dark" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="msapplication-tap-highlight" content="no" />
+
+    <!-- add to home screen for ios -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   </head>
   <body>
     <m-admin-root></m-admin-root>
