--- a/apps/w-admin/src/index.html
+++ b/apps/w-admin/src/index.html
@@ -2,7 +2,7 @@
 <html dir="ltr" lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>WAdmin</title>
+    <title>Admin Web</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
